adds source info for imgs

--- a/docs/software/tools/elastic.mdx
+++ b/docs/software/tools/elastic.mdx
@@ -9,7 +9,7 @@ import elastic from '@site/static/img/software/tools/elastic/elastic.png';
 import elasticWidget from '@site/static/img/software/tools/elastic/elastic-widget.gif';
 
 # Elastic
-<img src={elastic} width="800"/>
+<img src={elastic} width="800"/>[^1]
 Elastic is a simple telemetry tool developed by FRC Team 353. It is intended to act as a dashboard during robot operation. There is documentation available [here](https://frc-elastic.gitbook.io/docs). This page should act only as a quick reference for common actions and you should check the official documentation for more in depth instructions.
 Elastic is a modern replacement for [SmartDashboard](https://docs.wpilib.org/en/stable/docs/software/dashboards/smartdashboard/smartdashboard-intro.html) and [Shuffleboard](https://docs.wpilib.org/en/stable/docs/software/dashboards/shuffleboard/index.html).
 
@@ -19,7 +19,7 @@ Elastic can see any data published on NetworkTables similar to how SmartDashboar
 - To add a widget you can click `+ Add Widget` on the top toolbar and it will open a list of topics. All you need to do is drag the topic from the list to somewhere in the viewing window. Once the widget is placed you can resize it to best display the data.
 - After a widget is added you can right click on the container and `Edit Properties` will allow you to change display information about that topic.
 
-<img src={elasticWidget} width="600"/>
+<img src={elasticWidget} width="600"/>[^1]
 
 
 For more information on adding and customizing widgets you can view Elastic instructions on [Adding and Customizing Widgets](https://frc-elastic.gitbook.io/docs/customizing-your-dashboard/adding-and-customizing-widgets).
@@ -29,3 +29,5 @@ You can also create and name custom tabs to better organize your widgets. We typ
 
 ## Layout
 Recreating the widget layout and tabs can get painful if you keep switching laptops and making updates. Elastic has a process that allows you to upload an layout to the robot on deploy. You can make changes to this layout and then download it back to the computer to store in the repo. Check the Elastic instructions on [Remote Layout Downloading](https://frc-elastic.gitbook.io/docs/additional-features-and-references/remote-layout-downloading).
+
+[^1]: Screenshots are taken from official Elastic documentation.
