adds assignment operators info

--- a/docs/software/java/operators.mdx
+++ b/docs/software/java/operators.mdx
@@ -4,3 +4,86 @@ description: Overview of Java operators.
 hide_table_of_contents: true
 sidebar_position: 3
 ---
+
+# Operators
+Operators are symbols used to preform data manipulation and assignment. They allow us to preform math with our variables and change what values are stored in them. Operators only work with a specific types. For examples you cant multiple a `String`.
+
+## Arithmetic
+
+## Assignment
+You should be familiar with the `=` operator by now, but there are several more assignment operators that we can use in our code.
+Below is a table which shows most of the available assignment operators.
+
+<table>
+<tr>
+{/* Column Titles */}
+<td> Operator </td>
+<td> Description </td>
+<td> Example </td>
+<td> Equivalent Expression </td>
+</tr>
+<tr>
+{/* = operator */}
+<td> `=` </td>
+<td> Assignment </td>
+<td> Assigns a value (right side) to a variable (left side) </td>
+<td> `int x = 0;` </td>
+<td> `int x = 0;` </td>
+</tr>
+<tr>
+{/* += operator */}
+<td> `+=` </td>
+<td> Addition Assignment </td>
+<td>
+
+```java
+int x = 1;
+x += 1; // x is now 2
+```
+
+</td>
+<td> `x = x + 1;` </td>
+</tr>
+{/* -= operator */}
+<tr>
+<td> `-=` </td>
+<td> Subtraction Assignment </td>
+<td>
+
+```java
+double x = 3.14;
+x -= 0.14;  // x is now 3.0
+```
+
+</td>
+<td> `x = x - 0.14;` </td>
+</tr>
+{/* *= operator */}
+<tr>
+<td> *= </td>
+<td>Multiplication Assignment </td>
+<td>
+
+```java
+int x = 2;
+x *= 6;  // x is now 12
+```
+
+</td>
+<td> `x = x * 6;` </td>
+</tr>
+{/* /= operator */}
+<tr>
+<td> `/=` </td>
+<td> Division Assignment </td>
+<td>
+
+```java
+int x = 9;
+x /= 3;  // x is now 3
+```
+
+</td>
+<td> `x = x / 3;` </td>
+</tr>
+</table>
