initial condition doc info

--- a/docs/software/java/conditions.mdx
+++ b/docs/software/java/conditions.mdx
@@ -4,3 +4,258 @@ description: Overview of conditions.
 hide_table_of_contents: true
 sidebar_position: 4
 ---
+
+# Conditions
+Conditions are fundamental to programming. They allow us to preform certain actions based of the state of a program. A condition is defined as a comparison between two values using a comparison operator and enclosed in `()`.
+
+# Comparison Operators
+These operators allow us to compare two values together. Similar to our arithmetic operators you need to think about what comparing two datatypes mean. You can't use create a condition that compares `"hello"` and `5` because is there is logical comparison between a `String` and an `int`. A condition in java is define as comparison between two values using a comparison operator. The condition must be encompassed in `()`. The syntax for that would look like `([value] [comparison] [value])`.
+
+The are a few comparison operators each with their own behavior. Below is a table that shows the avaiable comparison operators, a brief desciption of their function, and a code based example.
+<table>
+<tr>
+{/* Column Titles */}
+<td> **Operator** </td>
+<td> **Description** </td>
+<td> **Example** </td>
+</tr>
+<tr>
+{/* == operator */}
+<td style={{textAlign: 'center', fontSize: 25}}> `==` </td>
+<td> equal </td>
+<td>
+```java
+(1 == 2) // false
+(false == false) // true
+```
+</td>
+</tr>
+<tr>
+{/* != operator */}
+<td style={{textAlign: 'center', fontSize: 25}}> `!=` </td>
+<td> not equal </td>
+<td>
+```java
+(1 != 2) // true
+(false != false) // false
+```
+</td>
+</tr>
+<tr>
+{/* < and <= operator */}
+<td style={{textAlign: 'center', fontSize: 25}}> `<`, `<=` </td>
+<td> less than, less than or equal to </td>
+<td>
+```java
+(-10 < 0) // true
+(-10 <= -10) // true
+```
+</td>
+</tr>
+<tr>
+{/* > and >= operator */}
+<td style={{textAlign: 'center', fontSize: 25}}> `>`, `>=` </td>
+<td> greater than, greater than or equal to </td>
+<td>
+```java
+(10 > 0) // true
+(10 >= 10) // true
+```
+</td>
+</tr>
+</table>
+
+## Logical Operators
+What if we want to make a compound condition? Compare if one conditions is true and another false? Both true? Luckily our pal [George Boole](https://en.wikipedia.org/wiki/George_Boole) had us in mind when he crated the concept called [boolean algebra](https://en.wikipedia.org/wiki/Boolean_algebra). The fundamentals of boolean logic is three logical operator **NOT**, **AND**, and **OR**. Below are some "truth tables" which show the boolean output of comparing conditions using those logical operators.
+
+<div style={{ display: 'flex', justifyContent: 'space-around', fontSize: 15}}>
+    <table>
+    <caption style={{textAlign: 'center', fontSize: 25}}> **NOT** </caption>
+    <tr> <td> **Condition** </td> <td> **Output** </td> </tr>
+    <tr> <td style={{ color: 'red' }}> false </td> <td style={{ color: 'green' }}> true </td> </tr>
+    <tr> <td style={{ color: 'green' }}> true </td> <td style={{ color: 'red' }}> false </td> </tr>
+    </table>
+
+    <table>
+    <caption style={{textAlign: 'center', fontSize: 25}}> **AND** </caption>
+    <tr> <td> **Condition A** </td> <td> **Condition B** </td> <td> **Output** </td> </tr>
+    <tr> <td style={{ color: 'red' }}> false </td> <td style={{ color: 'red' }}> false </td> <td style={{ color: 'red' }}> false </td> </tr>
+    <tr> <td style={{ color: 'red' }}> false </td> <td style={{ color: 'green' }}> true </td> <td style={{ color: 'red' }}> false </td> </tr>
+    <tr> <td style={{ color: 'green' }}> true </td> <td style={{ color: 'red' }}> false </td> <td style={{ color: 'red' }}> false </td> </tr>
+    <tr> <td style={{ color: 'green' }}> true </td> <td style={{ color: 'green' }}> true </td> <td style={{ color: 'green' }}> true </td> </tr>
+    </table>
+
+    <table>
+    <caption style={{textAlign: 'center', fontSize: 25}}> **OR** </caption>
+    <tr> <td> **Condition A** </td> <td> **Condition B** </td> <td> **Output** </td> </tr>
+    <tr> <td style={{ color: 'red' }}> false </td> <td style={{ color: 'red' }}> false </td> <td style={{ color: 'red' }}> false </td> </tr>
+    <tr> <td style={{ color: 'red' }}> false </td> <td style={{ color: 'green' }}> true </td> <td style={{ color: 'green' }}> true </td> </tr>
+    <tr> <td style={{ color: 'green' }}> true </td> <td style={{ color: 'red' }}> false </td> <td style={{ color: 'green' }}> true </td> </tr>
+    <tr> <td style={{ color: 'green' }}> true </td> <td style={{ color: 'green' }}> true </td> <td style={{ color: 'green' }}> true </td> </tr>
+    </table>
+</div>
+Because our conditions return a `boolean` *(true/false)*, these same logical operators can be used in code to compare conditions with one another. The tables below shows the logical operations available in Java. Remember that each `true` or `false` below can be replace with a condition.
+
+<div style={{ display: 'flex', justifyContent: 'space-around', fontSize: 15}}>
+    <table>
+    <caption style={{textAlign: 'center', fontSize: 25}}> **NOT** </caption>
+    <tr>
+    {/* ! operator */}
+    <td style={{textAlign: 'center', fontSize: 25}}> ! </td>
+    <td>
+    ```java
+    !(false) // true
+    !(true) // false
+    ```
+    </td>
+    </tr>
+    </table>
+
+    <table>
+    <caption style={{textAlign: 'center', fontSize: 25}}> **AND** </caption>
+    <tr>
+    {/* && operator */}
+    <td style={{textAlign: 'center', fontSize: 25}}> `&&` </td>
+    <td>
+    ```java
+    (false && false) // true
+    (false && true) // false
+    (true && false) // false
+    (true && true) // true
+    ```
+    </td>
+    </tr>
+    </table>
+
+    <table>
+    <caption style={{textAlign: 'center', fontSize: 25}}> **OR** </caption>
+    <tr>
+    {/* || operator */}
+    <td style={{textAlign: 'center', fontSize: 25}}> `||` </td>
+    <td>
+    ```java
+    (false || false) // true
+    (false || true) // true
+    (true || false) // true
+    (true || true) // true
+    ```
+    </td>
+    </tr>
+    </table>
+</div>
+
+## If Statement
+The mighty `if` statement, a programmers favorite tool. The `if` statement allows you to run a specific section of your code based on a supplied condition. This allows you to create powerful and unique behavior within your code.
+
+## Ternary Operator
+Programmers are lazy. Sometimes even too lazy to write an `if`-`else` statement for a simple condition, that preforms a very small action. Thats why they created the ternary operator `?`. The ternary operator can be added to the end of a condition and allow for quick one line `if-else` statements. The syntax for using it is as follows. `(condition)? <code if true> : <code if false>;` A quick example show its power can be seen below.
+```java
+// Traditional if-else statement
+if (is_button_pressed){
+    doThisThing();
+} else {
+    doThatThing();
+}
+
+// Ternary if-else statement
+(is_button_pressed)? doThisThing() : doThatThing();
+```
+
+## Switch Statement
+Programmers are **very** lazy. If I have a bunch of values I want to compare to for a variable and preform specific code for each value it would be painful to write 15 `if` or `if`-`else if` statements. Thankfully we can use a switch statement. It will allow you to provide and single expression for comparison and then easily create a case for different each value it can take on. This is the basic syntax structure:
+```java
+switch (<expression>) {
+    case <value>:
+    // Run code
+    break;
+}
+```
+It can be confusing to understand just by reading so look at the example below.
+```java
+int day = 4;
+switch (day) {
+    case 1:
+        System.out.println("Monday");
+        break;
+    case 2:
+        System.out.println("Tuesday");
+        break;
+    case 3:
+        System.out.println("Wednesday");
+        break;
+    case 4:
+        System.out.println("Thursday");
+        break;
+    case 5:
+        System.out.println("Friday");
+        break;
+    case 6:
+        System.out.println("Saturday");
+        break;
+    case 7:
+        System.out.println("Sunday");
+        break;
+    default:
+        System.out.println("Value not between 1 and 7");
+        break;
+}
+```
+```java title="Console Output"
+Thursday
+```
+:::danger ALWAYS INCLUDE A break
+If you forget to include a `break` at the end for your case it will cause the code to waterfall through following cases until a `break` or the end of the switch is reached. For example the code below would cause a waterfall from case 2 to case 4 because of the missing `break`.
+```java
+int day = 2;
+switch (day) {
+    case 1:
+        System.out.println("Monday");
+        break;
+    case 2:
+        System.out.println("Tuesday");
+    case 3:
+        System.out.println("Wednesday");
+    case 4:
+        System.out.println("Thursday");
+        break;
+    default:
+        System.out.println("Value not between 1 and 7");
+        break;
+}
+```
+```java title="Console Output"
+Tuesday
+Wednesday
+Thursday
+```
+:::
+:::tip Combining Cases
+Sometimes you can use the waterfall concept to your advantage if we have multiple values the expression can take, but want it to preform the same action.
+```java
+switch (month){
+    case "December":
+    case "January":
+    case "February":
+        System.out.println("Winter");
+        break;
+    case "March":
+    case "April":
+    case "May":
+        System.out.println("Spring");
+        break;
+    case "June":
+    case "July":
+    case "August":
+        System.out.println("Summer");
+        break;
+    case "September":
+    case "October":
+    case "November":
+        System.out.println("Fall");
+        break;
+    default:
+        System.out.println("Not a real month!");
+        break;
+}
+```
+:::
