--- a/docs/software/java/vars-dt.mdx
+++ b/docs/software/java/vars-dt.mdx
@@ -37,12 +37,54 @@ int team_number = 4143
 
 ## Datatypes
 You have seen a few of them already in the examples above, but there are plenty of datatypes in Java. A datatype is the type of data that will be referenced and in this case stored in our variables. Below is a list of a few common types that we use in our robot programs.
-| Datatype | Description | Example |
-|--|--|--|
-| `int` | A non-decimal number | `int team_number = 4143;` |
-| `double` | A decimal number | `double pi = 3.14;` |
-| `boolean` | A value that is either true or false | `boolean robot_is_on = true;` |
-| `String` | A list of characters (a.k.a. text) *note the capitalization in `String`| `String message = "I am a string!";` |
+<table>
+<tr>
+{/* Column Titles */}
+<td> **Datatype** </td>
+<td> **Description** </td>
+<td> **Example** </td>
+</tr>
+<tr>
+{/* int */}
+<td style={{textAlign: 'center', fontSize: 20}}> `int` </td>
+<td> A non-decimal number </td>
+<td>
+```java
+int team_number = 4143;
+```
+</td>
+</tr>
+<tr>
+{/* double */}
+<td style={{textAlign: 'center', fontSize: 20}}> `double` </td>
+<td> A decimal number </td>
+<td>
+```java
+double pi = 3.1415
+```
+</td>
+</tr>
+<tr>
+{/* boolean */}
+<td style={{textAlign: 'center', fontSize: 20}}> `boolean` </td>
+<td> A value that is either true or false </td>
+<td>
+```java
+boolean robot_is_on = true;
+```
+</td>
+</tr>
+<tr>
+{/* String */}
+<td style={{textAlign: 'center', fontSize: 20}}> `String` </td>
+<td> A list of characters (a.k.a. text) *note the capitalization in `String` </td>
+<td>
+```java
+String message = "I am a string!";
+```
+</td>
+</tr>
+</table>
 
 ## Enums
 If we wanted to create our own "datatype" with a fixed set of values we can create a `enum`. This is a special data type that allows for the definition of a fixed set of named values. We may want to use these to represent a system state or mode.
