--- a/docs/software/java/standards.mdx
+++ b/docs/software/java/standards.mdx
@@ -9,19 +9,19 @@ sidebar_position: 10
 
 ## Comments
 - All methods should be commented following java doc styling. Make sure to include any parameters or return members. Example is show below:
-```java
-/**
- * Calculates the chassis traveled distance based on provided speed and duration
- *
- * @param speed current chassis speed (m/s)
- * @param time duration of travel (s)
- *
- * @return traveled distance (m)
- */
-double calculateDistance(double speed, double time){
-    return speed * time;
-}
-```
+    ```java
+    /**
+     * Calculates the chassis traveled distance based on provided speed and duration
+     *
+     * @param speed current chassis speed (m/s)
+     * @param time duration of travel (s)
+     *
+     * @return traveled distance (m)
+     */
+    double calculateDistance(double speed, double time){
+        return speed * time;
+    }
+    ```
 
 ## Variables
 - All variables should be named using `snake_case`. Examples are shown below:
@@ -38,7 +38,7 @@ double calculateDistance(double speed, double time){
     boolean is_enabled_;
     float error_;
     ```
-- Variables that are constant should be named using `SCREAMING_SNAKE_CASE`. The should also use the `final` and `static` modifiers to prevent accidental updates and multiple references. Examples are shown below:
+- Variables that are constant should be named using `SCREAMING_SNAKE_CASE`. The should also use the `final` and `static` modifiers to prevent accidental updates and multiple instances. Examples are shown below:
     ```java
     static final double ELEVATOR_HOME_POSITION;
     static final int COUNTER_RESET;
