--- a/docs/software/tools/git.mdx
+++ b/docs/software/tools/git.mdx
@@ -147,6 +147,11 @@ Once your branch is in a state that you want to push it to remote for either sto
 git push
 ```
 
+To check if there are any changes on your remote branch that you many not have you can ***FETCH*** any updates to your local repo. The command below will update all your branch references for your local repo and show you any commits you may be missing.
+```git
+git fetch --all
+```
+
 If another developer has commit to the branch you are using from another computer you will need to make sure to ***PULL*** ⬇️ their changes into your working directory.
 ```git
 git pull
