--- a/docs/software/java/vars-dt.mdx
+++ b/docs/software/java/vars-dt.mdx
@@ -31,7 +31,7 @@ message = "I am a string!";
 :::tip[Declaring and Assigning]
 You can actually declare and assign a value to a variable in a single line. This is the preferred process since it will ensure the variable has a default value at the start of the program. This is done with the syntax `[type] [name] = [value]`.
 ```java
-int team_number = 4143
+int team_number = 4143;
 ```
 :::
 
