--- a/docs/software/java/operators.mdx
+++ b/docs/software/java/operators.mdx
@@ -9,7 +9,7 @@ sidebar_position: 3
 Operators are symbols used to preform data manipulation and assignment. They allow us to preform math with our variables and change what values are stored in them. Operators only work with a specific types. For examples you cant multiple a `String`.
 
 ## Arithmetic
-Arithmetic operators allow us to preform math operations with variables and numbers. Below is a list of the basic operators. You can see most operators are compatible with all number datatypes, but `String` is only compatible with the `+` operator. They should all do what you expect from our 2nd grade math class. The only thing that may be unique is the modulo operator `%`. This is used to calculate the remainder of dividing the two numbers.
+Arithmetic operators allow us to preform math operations with variables and numbers. Below is a list of the basic operators. You can see most operators are compatible with all number datatypes, but `String` is only compatible with the `+` operator. They should all do what you expect from your 2nd grade math class. The only thing that may be unique is the modulo operator `%`. This is used to calculate the remainder of dividing two numbers.
 
 <table>
 <tr>
