--- a/docs/software/java/methods.mdx
+++ b/docs/software/java/methods.mdx
@@ -4,3 +4,91 @@ description: Overview of Methods.
 hide_table_of_contents: true
 sidebar_position: 6
 ---
+
+# Methods
+If you haven't picked it up by now programmers are **very very** lazy. If we have code than is written more than once or could be repeated if template-able we can use a method. Methods are a block of code that preform a specific task or a set of actions. They are a fundamental concept in [object-oriented programming](./methods.mdx).
+
+## Method Syntax
+A method is defined by its signature. A method signature contains its [return](#return-type) type, method name, and any [parameters](#parameters) it may use as inputs.
+```java
+returnType methodName(){
+    // method code
+}
+```
+- `returnType`: Datatype of the value the method with return
+    - For simple examples imagine the return type as `void`. This means there is nothing returned.
+- `methodName`: This can be anything similar to a variable name. Try to name your methods based off what actions they preform.
+- `method code`: This will be the code that runs when your method is "called".
+
+Below is an example of a simple method.
+```java
+// Creating the Method
+void stopMotors(){
+    motor_speed = 0;
+}
+
+// Calling the Method
+stopMotors();
+```
+
+## Parameters
+Parameters allow us to template our method to allow for different inputs. The values when passed into a method called arguments. hey allow us to re-use our method with different arguments each time we call them. Methods can have as many parameters as you would like including none which you saw in the previous example. Each parameters need a datatype and a name to be referenced by within its scope.
+```java
+// Creating the Method
+void printInfo(String motor, double speed){
+    System.out.println(motor + ": " + speed);
+}
+
+// Calling the Method
+printInfo("Shooter Motor", 3.0);
+```
+
+:::note Method Scope
+Your parameters only exist in a method's scope. That means outside of the `{}` of your method they do not exist and cannot be referenced. This goes for any variables you create inside your method as well.
+```java
+// Neither param_name or var_name can be referenced here
+void methodName(double param_name){
+    double var_name;
+}
+// Neither param_name or var_name can be referenced here
+```
+:::
+:::tip
+You have seen curly braces `{}` in several parts of the code already. There are used in methods, if statements, classes, etc. This is actually the creation of a scope. They function the same way as described above. Any variables within your scope can only be referenced from inside that scope. You can declare a scope anywhere in your code if you were so inclined.
+:::
+
+## Return
+We can also have our methods produce an output. The examples above have use `void` as their return type. This means that they have nothing to return and are just executing code. If we change that return type to one of our datatypes we can make our method "return" something of that type.
+```java
+// Creating the Method
+int sum(int a, int b){
+    return a + b;
+}
+
+// Calling the Method
+int output = sum(5, 2)
+```
+
+:::note Ending the Method
+Any code in a method after the `return` will not be run.
+```java
+```java
+int sum(int a, int b){
+    int output = a + b
+    return output;
+    System.out.println(output); // This code will not run!
+}
+```
+:::
+:::tip Multiple Returns
+Methods can have multiple `return` statements as long as they are in different "branches" or logic within the code.
+```java
+boolean isNumberEven(int number){
+    if(number / 2 == 0){
+        return true;
+    } else {
+        return false;
+    }
+}
+```
+:::
