--- a/docs/software/lessons.mdx
+++ b/docs/software/lessons.mdx
@@ -7,7 +7,7 @@ sidebar_position: 10
 # Lessons Learned
 MARS/WARS has been around since 2012 and we have learned a lot of things about what makes a robot good and what make a robot bad. Some of it comes from how it is programmed. This list is meant to act as a updated document with the mistakes or tips we have learned.
 
-### Controls
+## Controls
 - ***Start with the simplest control system and increase complexity as needed.***[^1]
     - In years past we have focused on advanced controls using kinematics and spline control. This ends up eating a large portion of development time and can be avoided with simpler control concepts.
 - ***Attempt to make all subsystem actions in a state machine.***[^1]
@@ -15,7 +15,7 @@ MARS/WARS has been around since 2012 and we have learned a lot of things about w
 - ***Design the robot to work as automated as possible.***[^1]
     - This helps with both diver assist and auto integration, which greatly speeds up development when it comes time for auto and tuning.
 
-### Commands
+## Commands
 - ***Do not use commands for basic tele-op actions.***[^1]
     - Commands can get complicated and preform actions outside of the default subsystem loop. They also get more complicated as subsystem requirements are introduced since it can force the robot to preform actions with being explicitly told to do so. ***(2025 REEFSCAPE)***
 - ***Do not use subsystem default commands.***[^1]
@@ -24,11 +24,11 @@ MARS/WARS has been around since 2012 and we have learned a lot of things about w
     - Commands are the easiest way to interface with buttons and should be setup to just active a robot state and nothing more.
     - Auto can get more complex so commands may come in useful, but once again they should ideally only be used to set a robot state and nothing more.
 
-### Operation
+## Operation
 - ***Attempt to make the robot as simple to control as possible.***[^1]
     - Actions can be blended together or desired actions can be assumed by robot state. The less buttons and complexity the driver has to worry about the more they can focus on game strategy.
 
-### Development
+## Development
 - ***Do not sleep on the importance of auto integration time.***[^1]
     - Having an elite auto takes lots of tuning down to the quarter second. We need to ensure we put priority on auto tuning time over QoL robot features.
 
